src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Custom_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Equipment + Freight Discount %</description>
        <inlineHelpText>Equipment + Freight Discount %</inlineHelpText>
        <label>Equipment + Freight Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Equipment + Freight Discount $</description>
        <inlineHelpText>Equipment + Freight Discount $</inlineHelpText>
        <label>Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Gross_Margin__c</fullName>
        <description>Equipment Gross Margin %</description>
        <inlineHelpText>Equipment Gross Margin %</inlineHelpText>
        <label>Equipment Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Equipment_Price_FOB__c</fullName>
        <description>Unit Equipment Cost $
(Item Price * Multiplier (PAR) ) + Commission Add On + Start-up Add On + Service Add On + Misc. Add On One $ + Misc. Add On Two $ + Misc. Add On Three $ + Misc. Add On Four $</description>
        <inlineHelpText>Unit Equipment Cost $
(Item Price * Multiplier (PAR) ) + Commission Add On + Start-up Add On + Service Add On + Misc. Add On One $ + Misc. Add On Two $ + Misc. Add On Three $ + Misc. Add On Four $</inlineHelpText>
        <label>Unit Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_With_F_L__c</fullName>
        <description>Total Equipment + Freight Cost $
(Unit Equipment Cost $  +  Unit Freight Cost $) * Quantity</description>
        <inlineHelpText>Total Equipment + Freight Cost $
(Unit Equipment Cost $  +  Unit Freight Cost $) * Quantity</inlineHelpText>
        <label>Total Equipment + Freight Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Exchange rate from USD to Opportunity&apos;s Local Currency.</description>
        <inlineHelpText>Exchange rate from USD to Opportunity&apos;s Local Currency.</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Gross_Margin__c</fullName>
        <description>Freight Gross Margin %</description>
        <inlineHelpText>Freight Gross Margin %</inlineHelpText>
        <label>Freight Gross Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight_Percent__c</fullName>
        <description>Domestic Freight %</description>
        <inlineHelpText>Domestic Freight %</inlineHelpText>
        <label>Domestic Freight %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>Domestic Freight $</description>
        <inlineHelpText>Domestic Freight $</inlineHelpText>
        <label>Domestic Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Description_Spanish__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Item #</description>
        <inlineHelpText>Item #</inlineHelpText>
        <label>Item #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalSelling_Unitary_Equipment_Price_FOB__c</fullName>
        <description>Local Unit Equipment Selling Price
Local Unit Equipment Cost / (1- Equipment Gross Margin %)</description>
        <formula>ROUND(Local_Equipment_Price_FOB__c  / (1 - Equipment_Gross_Margin__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Equipment Selling Price
Local Unit Equipment Cost / (1- Equipment Gross Margin %)</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <description>Local Currency of Opportunity.</description>
        <inlineHelpText>Local Currency of Opportunity.</inlineHelpText>
        <label>Local Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Discount__c</fullName>
        <description>Local Equipment + Freight Discount
[Equipment + Freight Discount $] * Exchange Rate</description>
        <formula>ROUND(Discount__c *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Equipment + Freight Discount
[Equipment + Freight Discount $] * Exchange Rate</inlineHelpText>
        <label>Local Equipment + Freight Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Equipment_Price_FOB__c</fullName>
        <description>Local Unit Equipment Cost
(Local Item Price * Multiplier (PAR) ) + Local Commission Add On + Local Start-up Add On + Local Service Add On + Local Misc. Add On One + Local Misc. Add On Two + Local Misc. Add On Three + Local Misc. Add On Four</description>
        <formula>ROUND((Local_Sales_Price__c * Multiplier_PAR__c),2) + Local_Service_Add_On__c + Local_Start_up_Add_On__c + Local_Outsource_Add_On__c + Local_Misc_Add_On_One_Amount__c + Local_Misc_Add_On_Two_Amount__c + Local_Misc_Add_On_Three_Amount__c + Local_Misc_Add_On_Four_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Equipment Cost
(Local Item Price * Multiplier (PAR) ) + Local Commission Add On + Local Start-up Add On + Local Service Add On + Local Misc. Add On One + Local Misc. Add On Two + Local Misc. Add On Three + Local Misc. Add On Four</inlineHelpText>
        <label>Local Unit Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Equipment_With_F_L__c</fullName>
        <description>Local Total Equipment + Freight Cost
(Local Unit Equipment Cost  +  Local Unit Freight Cost) * Quantity</description>
        <formula>(Local_Equipment_Price_FOB__c +  Local_Total_Freight_Logistic__c) *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equipment + Freight Cost
(Local Unit Equipment Cost  +  Local Unit Freight Cost) * Quantity</inlineHelpText>
        <label>Local Total Equipment + Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Freight__c</fullName>
        <description>Local Domestic Freight
Domestic Freight $ * Exchange Rate</description>
        <formula>ROUND(Freight__c *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Domestic Freight
Domestic Freight $ * Exchange Rate</inlineHelpText>
        <label>Local Domestic Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Logistics_Add_On__c</fullName>
        <description>Local Export Freight Add On
Export Freight Add On $ * Exchange Rate</description>
        <formula>ROUND(Logistics_Add_On__c *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Export Freight Add On
Export Freight Add On $ * Exchange Rate</inlineHelpText>
        <label>Local Export Freight Add On</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Misc_Add_On_Four_Amount__c</fullName>
        <description>Local Misc. Add On Four
Misc. Add On Four $ * Exchange Rate</description>
        <formula>ROUND(Misc_Add_On_Four_Amount__c * Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Misc. Add On Four
Misc. Add On Four $ * Exchange Rate</inlineHelpText>
        <label>Local Misc. Add On Four</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Misc_Add_On_One_Amount__c</fullName>
        <description>Local Misc. Add On One
Misc. Add On One $ * Exchange Rate</description>
        <formula>ROUND(Misc_Add_On_One_Amount__c * Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Misc. Add On One
Misc. Add On One $ * Exchange Rate</inlineHelpText>
        <label>Local Misc. Add On One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Misc_Add_On_Three_Amount__c</fullName>
        <description>Local Misc. Add On Three
Misc. Add On Three $ * Exchange Rate</description>
        <formula>ROUND(Misc_Add_On_Three_Amount__c * Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Misc. Add On Three
Misc. Add On Three $ * Exchange Rate</inlineHelpText>
        <label>Local Misc. Add On Three</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Misc_Add_On_Two_Amount__c</fullName>
        <description>Local Misc. Add On Two
Misc. Add On Two $ * Exchange Rate</description>
        <formula>ROUND(Misc_Add_On_Two_Amount__c * Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Misc. Add On Two
Misc. Add On Two $ * Exchange Rate</inlineHelpText>
        <label>Local Misc. Add On Two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Outsource_Add_On__c</fullName>
        <description>Local Commission Add On
Commission Add On $ * Exchange Rate</description>
        <formula>ROUND(Outsource_Add_On__c *   Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Commission Add On
Commission Add On $ * Exchange Rate</inlineHelpText>
        <label>Local Commission Add On</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Price__c</fullName>
        <description>Local Item Price
Item Price * Exchange Rate</description>
        <formula>ROUND( Item_Price__c  *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Item Price
Item Price * Exchange Rate</inlineHelpText>
        <label>Local Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Local Total Equipment Selling Price
Local Unit Equipment Selling Price * Quantity</description>
        <formula>LocalSelling_Unitary_Equipment_Price_FOB__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equipment Selling Price
Local Unit Equipment Selling Price * Quantity</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Selling_Total_F_L__c</fullName>
        <description>Local Total Freight Selling Price
Local Unit Freight Selling Price * Quantity</description>
        <formula>Local_Selling_Unitary_Freight_Logistic__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Freight Selling Price
Local Unit Freight Selling Price * Quantity</inlineHelpText>
        <label>Local Total Freight Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Selling_Unitary_Freight_Logistic__c</fullName>
        <description>Local Unit Freight Selling Price
Local Unit Freight Cost / (1 - Freight Gross Margin %)</description>
        <formula>ROUND(Local_Total_Freight_Logistic__c / (1 - Freight_Gross_Margin__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Freight Selling Price
Local Unit Freight Cost / (1 - Freight Gross Margin %)</inlineHelpText>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Service_Add_On__c</fullName>
        <description>Local Service Add On
Service Add On $ * Exchange Rate</description>
        <formula>ROUND(Service_Add_On__c *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Service Add On
Service Add On $ * Exchange Rate</inlineHelpText>
        <label>Local Service Add On</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Start_up_Add_On__c</fullName>
        <description>Local Start-up Add On
Start-up Add On $ * Exchange Rate</description>
        <formula>ROUND(Start_up_Add_On__c *  Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Start-up Add On
Start-up Add On $ * Exchange Rate</inlineHelpText>
        <label>Local Start-up Add On</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Freight_Logistic__c</fullName>
        <description>Local Unit Freight Cost
(Local Unit Equipment Cost * Domestic Freight %) + Local Domestic Freight + Local Export Freight Add On</description>
        <formula>ROUND((Local_Equipment_Price_FOB__c  * Freight_Percent__c),2) + Local_Freight__c + Local_Logistics_Add_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Freight Cost
(Local Unit Equipment Cost * Domestic Freight %) + Local Domestic Freight + Local Export Freight Add On</inlineHelpText>
        <label>Local Unit Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Discount__c</fullName>
        <description>Local Total Equipment + Freight Discount
[Local Unit Equipment + Freight Discount] * Quantity</description>
        <formula>Local_Unitary_Selling_Discount__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equipment + Freight Discount
[Local Unit Equipment + Freight Discount] * Quantity</inlineHelpText>
        <label>Local Total Equipment + Freight Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Price_w_Log_Disc__c</fullName>
        <description>Local Total Equip+Freight Selling Price w Disc
[Local Unit Equip +Freight Selling Price w Disc] * Quantity</description>
        <formula>Local_Unitary_Selling_Price_w_Log_Disc__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equip+Freight Selling Price w Disc
[Local Unit Equip +Freight Selling Price w Disc] * Quantity</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Price_w_Logistics__c</fullName>
        <description>Local Total Equip +Freight Selling Price
(Local Unit Equipment Selling Price + Local Unit Freight Selling Price) * Quantity</description>
        <formula>Local_Unitary_Selling_Price_w_Logistics__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equip +Freight Selling Price
(Local Unit Equipment Selling Price + Local Unit Freight Selling Price) * Quantity</inlineHelpText>
        <label>Local Total Equip +Freight Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Unitary_Selling_Discount__c</fullName>
        <description>Local Unit Equipment + Freight Discount
([Local Unit Equip + Freight Selling Price] * [Equipment + Freight Discount %]) + [Local Equipment + Freight Discount]</description>
        <formula>ROUND(ROUND((Local_Unitary_Selling_Price_w_Logistics__c * Discount_Percent__c),2) + Local_Discount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Equipment + Freight Discount
([Local Unit Equip + Freight Selling Price] * [Equipment + Freight Discount %]) + [Local Equipment + Freight Discount]</inlineHelpText>
        <label>Local Unit Equipment + Freight Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Unitary_Selling_Price_w_Log_Disc__c</fullName>
        <description>Local Unit Equipment + Freight Selling Price w Disc
(Local Unit Equipment Selling Price + Local Unit Freight Selling Price) - [Local Unit Equipment + Freight Discount]</description>
        <formula>Local_Unitary_Selling_Price_w_Logistics__c - Local_Unitary_Selling_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Equipment + Freight Selling Price w Disc
(Local Unit Equipment Selling Price + Local Unit Freight Selling Price) - [Local Unit Equipment + Freight Discount]</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Unitary_Selling_Price_w_Logistics__c</fullName>
        <description>Local Unit Equip + Freight Selling Price
Local Unit Equipment Selling Price + Local Unit Freight Selling Price</description>
        <formula>(Local_Selling_Unitary_Freight_Logistic__c + LocalSelling_Unitary_Equipment_Price_FOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Unit Equip + Freight Selling Price
Local Unit Equipment Selling Price + Local Unit Freight Selling Price</inlineHelpText>
        <label>Local Unit Equip + Freight Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Add_On__c</fullName>
        <description>Export Freight Add On $</description>
        <inlineHelpText>Export Freight Add On $</inlineHelpText>
        <label>Export Freight Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_COP_Reserve__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;CO-OP Marketing Reserve&quot;, Misc_Add_On_One_Amount__c, 0) 
+ 
IF(Misc_Add_On_Two_Type__c = &quot;CO-OP Marketing Reserve&quot;, Misc_Add_On_Two_Amount__c, 0) 
+ 
IF(Misc_Add_On_Three_Type__c = &quot;CO-OP Marketing Reserve&quot;, Misc_Add_On_Three_Amount__c, 0) 
+ 
IF(Misc_Add_On_Four_Type__c = &quot;CO-OP Marketing Reserve&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CO-OP Marketing Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Contingency__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Contingency&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Contingency&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Contingency&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Contingency&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contingency $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Contractor_Markup__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Contractor Markup&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Contractor Markup&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Contractor Markup&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Contractor Markup&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contractor Markup $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Extended_Warranty__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Extended Warranty&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Extended Warranty&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Extended Warranty&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Extended Warranty&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Extended Warranty $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Inspection__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Inspection&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Inspection&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Inspection&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Inspection&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Inspection $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Labor_Hours__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Labor Hours&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Labor Hours&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Labor Hours&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Labor Hours&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Labor Hours $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Maintenance_Visits__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Maintenance Visits&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Maintenance Visits&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Maintenance Visits&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Maintenance Visits&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Maintenance Visits $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Marketing__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Marketing&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Marketing&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Marketing&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Marketing&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Standard_Warranty__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Standard Warranty&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Standard Warranty&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Standard Warranty&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Standard Warranty&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Standard Warranty $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Training_Factory__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Training Factory&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Training Factory&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Training Factory&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Training Factory&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training Factory $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Training_On_Site__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Training On Site&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Training On Site&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Training On Site&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Training On Site&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training On Site $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Travel_Expenses__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Travel Expenses&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Travel Expenses&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Travel Expenses&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Travel Expenses&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Travel Expenses $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Warranty_Reserve__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Warranty Reserve&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Warranty Reserve&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Warranty Reserve&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Warranty Reserve&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Warranty Reserve $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Witness_Test__c</fullName>
        <formula>Quantity * (IF(Misc_Add_On_One_Type__c = &quot;Witness Test&quot;, Misc_Add_On_One_Amount__c, 0)
+
 IF(Misc_Add_On_Two_Type__c = &quot;Witness Test&quot;, Misc_Add_On_Two_Amount__c, 0)
+
 IF(Misc_Add_On_Three_Type__c = &quot;Witness Test&quot;, Misc_Add_On_Three_Amount__c, 0)
+
 IF(Misc_Add_On_Four_Type__c = &quot;Witness Test&quot;, Misc_Add_On_Four_Amount__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Witness Test $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Four_Amount__c</fullName>
        <description>Specifies amount of fourth miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of fourth miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Four $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Four_Type__c</fullName>
        <description>Specifies type of fourth miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of fourth miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Four Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_One_Amount__c</fullName>
        <description>Specifies amount of first miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of first miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On One $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_One_Type__c</fullName>
        <description>Specifies type of first miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of first miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On One Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Three_Amount__c</fullName>
        <description>Specifies amount of third miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of third miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Three $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Three_Type__c</fullName>
        <description>Specifies type of third miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of third miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Three Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Two_Amount__c</fullName>
        <description>Specifies amount of second miscellaneous cost add on.</description>
        <inlineHelpText>Specifies amount of second miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Two $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Add_On_Two_Type__c</fullName>
        <description>Specifies type of second miscellaneous cost add on.</description>
        <inlineHelpText>Specifies type of second miscellaneous cost add on.</inlineHelpText>
        <label>Misc. Add On Two Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplier_PAR__c</fullName>
        <description>Multiplier (PAR)</description>
        <inlineHelpText>Multiplier (PAR)</inlineHelpText>
        <label>Multiplier (PAR)</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outsource_Add_On__c</fullName>
        <description>Commission Add On $</description>
        <inlineHelpText>Commission Add On $</inlineHelpText>
        <label>Commission Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Product_Category__c</fullName>
        <description>This formula is created to show the Product Category in the report area &quot;Opportunities with Quotes and Quote line Items&quot;</description>
        <formula>Product2.Product_Category__c</formula>
        <label>Product_Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Product_Family__c</fullName>
        <description>This formula is created to use in report area &quot;Opportunities with Quotes and Quote line Items&quot;</description>
        <formula>Product2.Product_Family__c</formula>
        <label>Product_Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Product_Group__c</fullName>
        <description>This formula is created to use in report area &quot;Opportunities with Quotes and Quote line Items&quot; report area</description>
        <formula>Product2.Product_Group__c</formula>
        <label>Product_Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Total Equipment Selling Price $
Unit Equipment Selling Price $ * Quantity</description>
        <inlineHelpText>Total Equipment Selling Price $
Unit Equipment Selling Price $ * Quantity</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>